basic "bold" functionality in place

--- a/BlazorMarkdig/Client/wwwroot/index.html
+++ b/BlazorMarkdig/Client/wwwroot/index.html
@@ -8,6 +8,8 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/MarkdigEditor.css" rel="stylesheet" />
+    <link href="BlazorMarkdig.Server.styles.css" rel="stylesheet">
     <script src="js/src/markdigEditor/markDigEditor.js"></script>
 </head>
 
