File upload working!  Template injected with URL of uploaded image.

--- a/BlazorMarkdig/Client/wwwroot/index.html
+++ b/BlazorMarkdig/Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="css/MarkdigEditor.css" rel="stylesheet" />
     <link href="BlazorMarkdig.Server.styles.css" rel="stylesheet">
     <script src="js/src/markdigEditor/markDigEditor.js"></script>
+    <script src="_content/BlazorInputFile/inputfile.js"></script>
 </head>
 
 <body>
